# musrs

./: .containerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  NOTES.md  README.md  RELEASE.md  TODO.md  build.rs  flake.nix  go.mod  go.sum  main.go  mount_share.sh  musrs.service  readme.md  schema.pg.sql  schema.sqlite.sql
.sqlx/: query-328b7c62fb1a8b933e10ce6a09a99e75cf264d6d24bbfc18ece1430276b09033.json  query-4547e80073ad9366ef0a0c7e78407ecf3b3968877afa7aa06bcccfea141dcfca.json  query-45521c4f7b2da9d822736389f0eb1a85e0bcba8e7ae0d4e1ef6963066329c1f4.json  query-491c7513a033581d6560d32b9a2135f39e716ee3d8e6cd34e5915b889d450559.json  query-4c027c0303c7e4df78bf00d16a7492fadb88857bcc41b7acaadb55b27b5081b1.json  query-a02fe548c4414c813d401dc4300fe9112eea8b9e365101e1936b4a927cd622d9.json  query-bfbc57772d0d4a1695235123ff94808372936a9245f2ffce06550482241c36a1.json  query-c53d9f8ed78b9ba4f4810794305f2e383a8d34c26623b0e914662591334cbeba.json  query-ce9152b0d504a1d7ea3357d23cd642c9825572054f95b54432c1d7f00a69cbf8.json
migrations/: 20241004230135_initial_add.sql
public/css/: app.css
public/js/: app.js
src/: errors.rs  file_utils.rs  lib.rs  main.rs  state.rs  types.rs
src/db/: library.rs  mod.rs
src/routes/: api.rs  index.rs  mod.rs  song.rs
static/: index.html
templates/: layout.j2  library.j2
templates/base/: header.layout.html
templates/common/: index.page.html
ui/: bun.lockb  index.html  package.json  tailwind.config.js
ui/src/: App.tsx  Row.tsx  app.tsx  index.css
ui/src/app/: hooks.ts  store.ts
ui/src/components/: Controls.tsx  GlobalSearch.tsx  Header.tsx  Playlist.tsx  Song.tsx  (+3 more)
(+6 files in other folders)
