[package]
name = "musrs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0.1"
anyhow = "1.0.75"
audiotags = "0.4.1"
dotenvy = "0.15.7"
env_logger = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
static-files = "0.2.3"
tera = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
static-files = "0.2.1"
